# Aizo-P2-graf

./: .gitignore  CMakeLists.txt  bench_dataset.cpp  run_studies.sh
data/: bench_networkx.py  bitcoin_alpha.txt  compare_dijkstra.py  compare_results.py  convert_dataset.py  mst_nieskierowany.txt  networkx_result.txt  sp_skierowany.txt  test.txt  ujemny_cykl_skierowany.txt
include/: AdjacencyList.h  CsvWriter.h  Dijkstry.h  FordaBellmana.h  FordaFulkersona.h  Fordabellmana.h  GraphFileReader.h  GraphGenerator.h  IncidenceMatrix.h  Kruskala.h  MFResult.h  MSTResult.h  Prim.h  SPResult.h  ShellSort.h
results/: bitcoin_bellman.txt  bitcoin_dijkstra.txt  dataset_times.csv  networkx_times.csv  study_A_mf.csv  study_A_mst.csv  study_A_sp.csv  study_B_mf.csv  study_B_mst.csv  study_B_sp.csv
src/: main.cpp
